Revision history for Verilator

The contributors that suggested a given feature are shown in []. Thanks!


* Verilator 4.109 devel

****  Fix TIMESCALE warnings on primitives (#2763). [Xuanqi]


* Verilator 4.108 2021-01-10

**    Many VPI changes for IEEE compatibility, which may alter behavior from previous releases.

**    Support randomize() class method and rand (#2607). [Krzysztof Bieganski]

***   Support $cast and new CASTCONST warning.

***   Add --top option as alias of --top-module.

***   Add LATCH and NOLATCH warnings (#1609) (#2740). [Julien Margetts]

****  Remove Unix::Processors internal test dependency.

****  Report UNUSED on parameters, localparam and genvars (#2627). [Charles Eric LaForest]

****  Add error on real to non-real output pins (#2690). [Peter Monsson]

****  Support package imports before parameters in interfaces (#2714). [James Hanlon]

****  Support --sanitize in internal tests (#2705). [Yutetsu TAKATSUKASA]

****  Fix passing parameter type instantiations by position number.

****  Fix DPI open array handling issues.

****  Fix error when dotted refers to missing module (#2095). [Alexander Grobman]

****  Fix little endian packed array counting (#2499). [phantom-killua]

****  Fix showing reference locations for BLKANDNBLK (#2170). [Yuri Victorovich]

****  Fix genblk naming to match IEEE (#2686). [tinshark]

****  Fix VPI memory word indexing (#2695). [Marlon James]

****  Fix vpiLeftRange on little-endian memories (#2696). [Marlon James]

****  Fix VPI module tree (#2704). [Todd Strader]

****  Fix vpi_release_handle to be called implicitly per IEEE (#2706).

****  Fix to allow inheriting 'VerilatedVcdFile' class. (#2720) [HyungKi Jeong]

****  Fix $urandom_range maximum value (#2723). [Nandu Raj]

****  Fix tracing empty sc module (#2729).

****  Fix generate for unrolling to be signed (#2730). [yanx21]

****  Fix to emit timescale in hierarchical blocks (#2735). [Yutetsu TAKATSUKASA]
